--- a/dashboard.css
+++ b/dashboard.css
@@ -27,7 +27,7 @@ body {
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
-    top: 51px;
+    top: 75px;
     bottom: 0;
     left: 0;
     z-index: 1000;
@@ -35,7 +35,7 @@ body {
     padding: 20px;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #f5f5f5;
+    background-color: #009C96;
     border-right: 1px solid #eee;
   }
 }
