--- a/dashboard.css
+++ b/dashboard.css
@@ -50,7 +50,7 @@ body {
 .nav-sidebar > li > a {
   padding-right: 20px;
   padding-left: 20px;
-  color:#ffffff;
+  color:#009C96;
 }
 .nav-sidebar > .active > a,
 .nav-sidebar > .active > a:hover,
