--- a/dashboard.css
+++ b/dashboard.css
@@ -50,11 +50,11 @@ body {
 .nav-sidebar > li > a {
   padding-right: 20px;
   padding-left: 20px;
-  color:#009C96;
+  color:#ffffff;
 }
 .nav-sidebar > .active > a,
-.nav-sidebar > .active > a:hover,
-.nav-sidebar > .active > a:focus {
+.nav-sidebar > a:hover,
+.nav-sidebar > a:focus {
   color: #009C96;
   background-color: #fff;
 }
