--- a/dashboard.css
+++ b/dashboard.css
@@ -54,6 +54,7 @@ body {
   color:#ffffff;
   font-family: 'Cabin', sans-serif;
   font-weight: 400;
+  font-size: 24pt;
 
 }
 .nav-sidebar > .active > a,
