--- a/dashboard.css
+++ b/dashboard.css
@@ -49,7 +49,7 @@ body {
   margin-left: -20px;
 }
 .nav-sidebar > li > a {
-  padding-right: 20px;
+  padding: 20px;
   padding-left: 20px;
   color:#ffffff;
   font-family: 'Cabin', sans-serif;
