--- a/dashboard.css
+++ b/dashboard.css
@@ -82,11 +82,11 @@ body {
   margin-top: 0;
 }
 
-.h1 .page-header .first-name {
+.l .first-name {
   color: #009C96;
 }
 
-.h1 .last-name {
+.l .last-name {
   color: #000000;
 }
 
