--- a/dashboard.css
+++ b/dashboard.css
@@ -27,7 +27,7 @@ body {
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
-    top: 140px;
+    top: 140;
     bottom: 0;
     left: 0;
     z-index: 1000;
@@ -90,22 +90,9 @@ body {
   color: #000000;
 }
 
-
 /*
- * Placeholder dashboard ideas
+ * Resume Modal
  */
-
-.placeholders {
-  margin-bottom: 30px;
-  text-align: center;
-}
-.placeholders h4 {
-  margin-bottom: 0;
-}
-.placeholder {
-  margin-bottom: 20px;
-}
-.placeholder img {
-  display: inline-block;
-  border-radius: 50%;
-}
+ .modal {
+  top: 30;
+ }
