--- a/dashboard.css
+++ b/dashboard.css
@@ -104,3 +104,47 @@ p {
 .modal.fade.in {
   top: 5%;
 }
+
+/* -----------------------------------------------
+    Extra hidden/visible classes
+----------------------------------------------- */
+ 
+.visible-narrow-desktop {
+  display: none !important;
+}
+ 
+@media (min-width: 980px) and (max-width: 1199px) {
+  .visible-narrow-desktop {
+    display: inherit !important;
+  }
+  .hidden-narrow-desktop {
+    display: none !important;
+  }
+  .hidden-desktop {
+    display: inherit !important;
+  }
+  .visible-desktop {
+    display: none !important;
+  }
+}
+ 
+@media (max-width: 767px) {
+  .hidden-narrow-desktop {
+    display: inherit !important;
+  }
+  .visible-narrow-desktop {
+    display: none !important;
+  }
+  .hidden-desktop {
+    display: inherit !important;
+  }
+  .visible-desktop {
+    display: none !important;
+  }
+  .visible-phone {
+    display: inherit !important;
+  }
+  .hidden-phone {
+    display: none !important;
+  }
+}
