--- a/dashboard.css
+++ b/dashboard.css
@@ -108,7 +108,28 @@ p {
 /* -----------------------------------------------
     Extra hidden/visible classes
 ----------------------------------------------- */
- 
+
+.hidden {
+  display: none;
+  visibility: hidden;
+}
+
+.visible-phone {
+  display: none !important;
+}
+
+.visible-tablet {
+  display: none !important;
+}
+
+.hidden-desktop {
+  display: none !important;
+}
+
+.visible-desktop {
+  display: inherit !important;
+}
+
 @media (min-width: 768px) and (max-width: 979px) {
   .hidden-desktop {
     display: inherit !important;
