modal-mobile-test-8

--- a/dashboard.css
+++ b/dashboard.css
@@ -101,6 +101,11 @@ p {
 /*
  * Resume Modal
  */
+ .modal {
+  margin-left: auto;
+  margin-right: auto;
+  width: 309px;
+ }
 .modal.fade.in {
   top: 2%;
   min-width: 309px;
