--- a/dashboard.css
+++ b/dashboard.css
@@ -102,8 +102,7 @@ p {
  * Resume Modal
  */
  .modal {
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: -154;
   width: 309px;
  }
 .modal.fade.in {
